fix: Update font size and alignment in Header.css and index.jsx

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,7 +9,7 @@ svg text {
   animation: stroke 8s infinite alternate;
   stroke-width: 2;
   stroke: #9a031e;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
 }
 @keyframes stroke {
   0% {
@@ -40,6 +40,7 @@ svg text {
 .wrapper {
   display: flex;
   align-self: stretch;
+  /* flex: 0 1 100%; */
 }
 
 @media screen and (min-width: 768px) {
